--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://pastehill.com/tb8tpmnnhb">
+    <meta http-equiv="refresh" content="0; url=https://rentry.org/s2aqtb4f">
     <title>Yönlendiriliyor...</title>
 </head>
 <body>
